# udp_calc

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  ClientUDP  ClientUDP.c  ClientUDP.h  Generic_Functions.h  Project4.docx  README.md  ServerUDP  ServerUDP.c  ServerUDP.h  cmake_install.cmake  compile_commands.json  setup.sh
EncodeDecode/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Decoder.c  Decoder.h  Encoder.c  Encoder.h  RequestResponse.h  cmake_install.cmake  compile_commands.json
EncodeDecode/unit_test/: CMakeLists.txt  EncodeTests.cc
